// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConventionModal /> should render a button 1`] = `
.c1 {
  padding: 0.625rem 1rem;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: 100%;
}

.c4 {
  font-size: 0.9rem;
  color: #4c5467;
}

.c3 {
  font-size: 0.9rem;
  color: #0053b3;
}

.c2 {
  width: 2.5rem;
  display: inline-block;
  margin: 1rem;
}

.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  background: transparent;
  padding: 0%;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  display: block;
  height: 100%;
  border-radius: 0.25rem;
}

.c0 > * {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

.c0:focus > *,
.c0:active > *,
.c0:hover > * {
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
  border: 1px solid #80bdff;
  box-shadow: 0 0 2px 2px #bfdeff;
}

<div>
  <button
    class="c0"
  >
    <div
      class="c1"
    >
      <img
        alt=""
        class="c2"
        src="/static/assets/icons/book_web.svg"
      />
      <h3
        class="c3"
      >
        Votre convention collective
      </h3>
      <p
        class="c4"
      >
        Trouvez simplement la convention collective dont vous dépendez
      </p>
    </div>
  </button>
</div>
`;

exports[`<ConventionModal /> should render a popup when click on button 1`] = `
.c5 {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: rgba(0,0,0,0.5);
  overflow: auto;
}

.c6 {
  position: relative;
  margin: 10vh auto;
  padding: 2rem;
  width: 50vw;
  max-height: calc(100vh - 2 * 10vh);
  background: white;
  border-radius: 0.25rem;
  outline: none;
  overflow-y: auto;
}

.c11 {
  position: absolute;
  top: 0;
  right: 0;
  padding: 0.625rem;
  color: #8393a7;
  line-height: 0;
  background: transparent;
  border: none;
  -webkit-appearance: none;
  cursor: pointer;
}

.c1 {
  padding: 0.625rem 1rem;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: 100%;
}

.c4 {
  font-size: 0.9rem;
  color: #4c5467;
}

.c3 {
  font-size: 0.9rem;
  color: #0053b3;
}

.c2 {
  width: 2.5rem;
  display: inline-block;
  margin: 1rem;
}

.c9 li[role="option"]:nth-child(2n + 1) {
  background: #f7f7f7;
}

.c8 {
  margin-top: 10px;
}

.c7 {
  color: #000;
  font-size: 1.2em;
  margin-top: 20px;
}

.c10 {
  color: #666;
  font-size: 1em;
  font-weight: bold;
  margin: 20px 0 10px 0;
}

.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  background: transparent;
  padding: 0%;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  display: block;
  height: 100%;
  border-radius: 0.25rem;
}

.c0 > * {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

.c0:focus > *,
.c0:active > *,
.c0:hover > * {
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
  border: 1px solid #80bdff;
  box-shadow: 0 0 2px 2px #bfdeff;
}

@media (max-width:1200px) {
  .c6 {
    width: 60vw;
  }
}

@media (max-width:980px) {
  .c6 {
    width: 80vw;
  }
}

@media (max-width:600px) {
  .c6 {
    margin: 1rem;
    max-height: calc(100vh - 2 * 1rem);
    width: calc(100% - 2 * 1rem);
  }
}

@media (max-width:600px) {
  .c11 {
    position: fixed;
    top: 0.625rem;
    right: 0.625rem;
  }
}

<body>
  <div
    aria-hidden="true"
  >
    <button
      class="c0"
    >
      <div
        class="c1"
      >
        <img
          alt=""
          class="c2"
          src="/static/assets/icons/book_web.svg"
        />
        <h3
          class="c3"
        >
          Votre convention collective
        </h3>
        <p
          class="c4"
        >
          Trouvez simplement la convention collective dont vous dépendez
        </p>
      </div>
    </button>
  </div>
  <reach-portal>
    <div
      class="c5"
      data-reach-dialog-overlay="true"
    >
      <div
        aria-modal="true"
        class="c6"
        data-reach-dialog-content="true"
        tabindex="-1"
      >
        <form>
          <h2>
            Trouvez votre convention collective
          </h2>
          <div>
            <h3
              class="c7"
            >
              Recherche par nom ou par identifiant
            </h3>
            Saisissez l’identifiant de convention collective (IDCC) ou le nom de la branche :
            <div
              class="c8"
            >
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="react-autowhatever-1"
                role="combobox"
                style="position: relative;"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="react-autowhatever-1"
                  autocomplete="off"
                  class="full-width"
                  name="query"
                  placeholder="Convention collective"
                  type="search"
                  value=""
                />
                <div
                  class="c9"
                  id="react-autowhatever-1"
                  role="listbox"
                />
              </div>
            </div>
            <div
              class="c10"
            >
              Comment trouver ma convention collective ?
            </div>
            <ul>
              <li>
                Elle doit figurer au 
                <b>
                  bulletin de paie
                </b>
                , et sur une notice remise à l’embauche ou 
                <b>
                  sur le contrat de travail
                </b>
              </li>
              <li>
                Sur l’affichage obligatoire dans l’entreprise (avec les modalités de consultation en entreprise)
              </li>
            </ul>
            <div
              class="c10"
            >
              Quelle est la convention collective applicable ?
            </div>
            <ul>
              <li>
                En principe celle relevant de l’activité principale dans l’entreprise pour les cas les plus simples.
              </li>
            </ul>
          </div>
        </form>
        <form>
          <h3
            class="c7"
          >
            Recherche par SIREN ou SIRET
          </h3>
          Saisissez le numéro de SIREN ou SIRET de votre entreprise afin d’obtenir votre convention collective :
          <div
            class="c8"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="react-autowhatever-1"
              role="combobox"
              style="position: relative;"
            >
              <input
                aria-autocomplete="list"
                aria-controls="react-autowhatever-1"
                autocomplete="off"
                class="full-width"
                name="query"
                placeholder="Numéro de SIRET à 14 chiffres"
                type="search"
                value=""
              />
              <div
                class="c9"
                id="react-autowhatever-1"
                role="listbox"
              />
            </div>
            <p>
              <span>
                 
              </span>
            </p>
            <p
              style="font-style: italic;"
            >
              Vous pouvez chercher le SIRET de votre entreprise sur 
              <a
                href="https://entreprise.data.gouv.fr/"
              >
                entreprise.data.gouv.fr
              </a>
            </p>
          </div>
        </form>
        <button
          class="c11"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            title="fermer la modale"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </div>
  </reach-portal>
</body>
`;
